--- a/html/index.html
+++ b/html/index.html
@@ -5,16 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Blog Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
 
-   
-   
-   
-    <!-------------------------- HEADER & NAVIGATION -------------------->
+
+<!-------------------------- HEADER & NAVIGATION -------------------->
     <div class="header">
         <nav>
             <h2 class="logo">Notes <i>Lifestyle</i></h2>
@@ -48,7 +46,7 @@
         <h1>What The Food Is Saying Today</h1>
         <div class="grid">
             <div class="card">
-                   <div class="card-img"><img src="./new42.jpg" alt="salads"></div>
+                   <div class="card-img"><img src="/images/new42.jpg" alt="salads"></div>
                    <div class="card-body">
                        <h2 class="card-title">Let's Salad</h2>
                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque quidem adipisci tempora doloremque obcaecati,
@@ -59,7 +57,7 @@
             </div>
             
             <div class="card">
-                    <div class="card-img"><img src="./seven.jpg" alt="salads"></div>
+                    <div class="card-img"><img src="/images/seven.jpg" alt="salads"></div>
                     <div class="card-body">
                        <h2 class="card-title">Breakfast Favourite</h2>
                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque quidem     adipisci tempora doloremque obcaecati,
@@ -71,7 +69,7 @@
 
 
             <div class="card">
-                    <div class="card-img"><img src="./thirteen.jpg" alt="vegan"></div>
+                    <div class="card-img"><img src="/images/thirteen.jpg" alt="vegan"></div>
                     <div class="card-body">
                         <h2 class="card-title">Vegan Began</h2>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque quidem adipisci tempora doloremque obcaecati,
@@ -88,7 +86,7 @@
         <div class="row-container">
 
             <div class="row-card">
-                <div><img src="./beauty two.jpg" alt="beauty" class="row-img"></div>
+                <div><img src="/images/beauty two.jpg" alt="beauty" class="row-img"></div>
                 <div class="row-card-body">
                     <h2 class="row-header">Beauty</h2>
                     <a href="#">
@@ -102,7 +100,7 @@
             </div>
 
             <div class="row-card">
-                <div><img src="./wellness boy.jpg" alt="wellness" class="row-img"></div>
+                <div><img src="/images/wellness boy.jpg" alt="wellness" class="row-img"></div>
                 <div class="row-card-body">
                     <h2 class="row-header">Wellness</h2>
                     <a href="#">
@@ -116,7 +114,7 @@
             </div>
 
             <div class="row-card">
-                <div><img src="./new 11.jpg" alt="soup" class="row-img"></div>
+                <div><img src="/images/new 11.jpg" alt="soup" class="row-img"></div>
                 <div class="row-card-body">
                     <h2 class="row-header">Food</h2>
                     <a href="#">
