--- a/html/blogpost.html
+++ b/html/blogpost.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post</title>
-    <link rel="stylesheet" href="./styles2.css">
+    <link rel="stylesheet" href="/css/styles2.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 <body>
+
+    <!---------------------HEADER & NAVIGATION----------->
     <nav class="navbar">
         <div class="container">
             <h2 class="logo">Notes <i>Lifestyle</i></h2>
@@ -42,20 +44,23 @@
                 <div class="blog-post">
                     <p class="subhead"><span class="span-post">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum error tempore praesentium, quo, cupiditate beatae odit explicabo, dolor maxime minus officia temporibus ut! Dicta, eius. Voluptatum placeat quam velit incidunt ullam tempora quae, nam qui laborum provident nihil magni praesentium illum obcaecati accusantium vero dolorem dolores cupiditate corrupti consequatur facilis cum illo autem? </span></p>
                     <p><span class="span-post-two">Facilis distinctio voluptas nihil natus necessitatibus quis quibusdam quos architecto alias, non eligendi aspernatur nobis eaque nisi hic inventore aliquam. Eaque iure delectus corrupti molestias culpa eos, voluptatibus doloribus magni fugit, expedita, quasi iusto blanditiis iste consequatur dolorem Commodi placeat aut quasi delectus minima, dolores amet nemo veritatis neque, est deleniti veniam tempore libero possimus. Fugiat sapiente fuga, molestiae deserunt vel porro explicabo repellendus nostrum consequatur iste reprehenderit rerum culpa ducimus ipsam praesentium doloremque voluptas dicta veritatis ab voluptatum? Quis, mollitia. Minima ducimus voluptatum culpa rerum perspiciatis doloremque excepturi modi error rem vel iusto natus numquam, earum, harum fuga nihil? Deserunt illo facilis deleniti? Veniam minus sit necessitatibus eum minima nesciunt, ratione aperiam officia corporis quod sint vero tempore? Nulla voluptate delectus at dicta tempore reiciendis voluptatem, aspernatur enim repellendus eos dolore cumque asperiores ratione laudantium! Assumenda unde vero incidunt labore, libero pariatur veritatis quod repudiandae.</span></p>
-                    <figure><img src="./wellness 2.jpg" alt="" class="pictures"></figure>
+                    <figure><img src="/images/wellness 2.jpg" alt="" class="pictures"></figure>
                     <figcaption>Featured image by unsplash</figcaption>
                     <h2 class="title">How wellness balaces the soul spirit and body</h2>
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis labore inventore ipsum esse at accusantium officia natus tempora similique. Vel magnam voluptates sed culpa ad iste distinctio reprehenderit assumenda quia natus. Illum, cupiditate hic. Numquam sunt laudantium neque, consectetur labore eos odio veniam ea repellendus sequi corrupti nesciunt deleniti laborum dolores recusandae incidunt itaque deserunt obcaecati voluptas provident nulla. Error doloribus voluptatibus laboriosam iste maiores ipsa consectetur ut doloremque illo consequuntur, blanditiis dolores aliquam quis sed libero obcaecati molestiae corporis enim fugiat voluptatem nostrum. Aliquam corporis tempora ex facilis, vel quisquam ratione ipsam aliquid consequuntur ipsa quae maxime. Ullam reiciendis odio ut numquam architecto iusto voluptas dolorum quas, sapiente reprehenderit nesciunt amet excepturi debitis eos tempore! Fugiat soluta totam dolor ex veniam, facilis et maxime possimus ratione, blanditiis velit eaque. Eum repellendus commodi cumque cupiditate neque, voluptatum iusto fugiat unde, magnam pariatur odit ipsam! Ex ducimus ea pariatur minus iste!</p>
-                    <figure><img src="./wellness.jpg" alt="" class="pictures"></figure>
+                    <figure><img src="/images/wellness.jpg" alt="" class="pictures"></figure>
                     <figcaption>image by unsplash</figcaption>
                     <h2 class="title">The feel of greatness after a morning workout outside</h2>
                     <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet placeat odit provident suscipit error, sed tempore corporis nihil iste expedita necessitatibus veniam consectetur inventore sunt quo iure minus non? Placeat ad praesentium magnam commodi ducimus quaerat quam architecto aut, sunt facere alias. Ipsam nihil aliquam cumque, dolorem quibusdam nemo nam commodi fuga repellat omnis incidunt maiores dolore tenetur aut enim, facilis qui natus ducimus doloribus, in sequi soluta temporibus error nulla? Beatae fugiat sed cupiditate, ex eius pariatur error molestiae dolorem voluptate tempora consectetur quas quis? Sed ipsum accusamus, quam ad nulla adipisci facere quas assumenda blanditiis dolores atque.</p>
                 </div>
+
+
+                <!------------AUTHOR INFO------------->
             </main>
             <aside class="author-info">
                 <h4>Author's Info</h4>
                 <div class="avatar-info">
-                    <img src="./cat.jpeg" alt="" class="avatar">
+                    <img src="/images/cat.jpeg" alt="" class="avatar">
                     <div class="card-author"><i class="fas fa-user"></i><a href="#" class="author-link">Giselle Carter</a></div>
                     <div class="card-author"><i class="fas fa-school"></i><a href="#" class="author-link">FUPRE</a></div>
                     <div class="card-author"><i class="fas fa-info"></i><a href="#" class="author-link">A graduate of petroleum engineering with a sudden passion for frontend engineering that loves beyonce and surfing the internet</a></div>
@@ -64,14 +69,14 @@
             </aside>
     </section>
 
-
+<!---------------------------FOOTER-------------------------->
     <footer>
         <div class="footer">
             <div class="footer2">
                 <p>Subscribe To Get Our Newsletter</p>
                 <form action="form" class="form">
                     <input type="email" class="textbox" placeholder="Enter your Email">
-                    <input type="submit" name="submit" value class="btn">
+                    <button class="btn">Subscribe</button>
                 </form>
             </div>
             <div class="social-media">
