Project one correction

--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque quidem adipisci tempora doloremque obcaecati,
                         ullam et est excepturi debitis facilis quam veritatis ipsa exercitationem provident ut totam! Quam, nesciunt
                         eaque!</p>
-                        <a href="#" class="click">read &rarr;</a>
+                        <a href="/html/blogpost.html" class="click">read &rarr;</a>
                     </div>
             </div>
             
@@ -81,15 +81,15 @@
         </div>
     </section>
 
-    <section class="row-wrapper"><div class="fieldset"><hr class="left" />OlderPost<hr class="right" />
-        </div>
+    <section class="row-wrapper">
+        <div class="fieldset">Older Post</div>
         <div class="row-container">
 
             <div class="row-card">
                 <div><img src="/images/beauty two.jpg" alt="beauty" class="row-img"></div>
                 <div class="row-card-body">
                     <h2 class="row-header">Beauty</h2>
-                    <a href="#">
+                    <a href="/html/blogpost.html">
                         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nam magnam ducimus id quod eveniet
                             obcaecati soluta, earum qui. Quam veniam fugiat molestiae ratione recusandae ducimus, velit aliquam
                             corporis veritatis".
@@ -103,7 +103,7 @@
                 <div><img src="/images/wellness boy.jpg" alt="wellness" class="row-img"></div>
                 <div class="row-card-body">
                     <h2 class="row-header">Wellness</h2>
-                    <a href="#">
+                    <a href="/html/blogpost.html">
                         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nam magnam ducimus id quod eveniet
                             obcaecati soluta, earum qui. Quam veniam fugiat molestiae ratione recusandae ducimus, velit aliquam
                             corporis veritatis".
@@ -117,7 +117,7 @@
                 <div><img src="/images/new 11.jpg" alt="soup" class="row-img"></div>
                 <div class="row-card-body">
                     <h2 class="row-header">Food</h2>
-                    <a href="#">
+                    <a href="/html/blogpost.html">
                         <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nam magnam ducimus id quod eveniet
                             obcaecati soluta, earum qui. Quam veniam fugiat molestiae ratione recusandae ducimus, velit aliquam
                             corporis veritatis".
