Added the required changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="blogpost.html" target="_blank">Blog</a></li>
+                <li><a href="html/blogpost.html" target="_blank">Blog</a></li>
                 <li><a href="#">Food</a></li>
                 <li><a href="#">Wellness</a></li>
             </ul>
@@ -63,7 +63,7 @@
                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque quidem     adipisci tempora doloremque obcaecati,
                         ullam et est excepturi debitis facilis quam veritatis ipsa exercitationem provident ut totam! Quam, nesciunt
                         eaque!</p>
-                        <a href="#" class="click">read &rarr;</a>
+                        <a href="/html/blogpost.html" class="click">read &rarr;</a>
                     </div>
             </div>
 
@@ -75,7 +75,7 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque quidem adipisci tempora doloremque obcaecati,
                         ullam et est excepturi debitis facilis quam veritatis ipsa exercitationem provident ut totam! Quam, nesciunt
                         eaque!</p>
-                        <a href="#" class="click">read &rarr;</a>
+                        <a href="/html/blogpost.html" class="click">read &rarr;</a>
                     </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                 <div class="row-card-body">
                     <h2 class="row-header">Beauty</h2>
                     <a href="/html/blogpost.html">
-                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nam magnam ducimus id quod eveniet
+                        <p>"Lorem ipsum dolor, sit amet <u> adipisicing elit. Quas nam magnam ducimus</u> id quod eveniet
                             obcaecati soluta, earum qui. Quam veniam fugiat molestiae ratione recusandae ducimus, velit aliquam
                             corporis veritatis".
                         </p>
@@ -104,9 +104,9 @@
                 <div class="row-card-body">
                     <h2 class="row-header">Wellness</h2>
                     <a href="/html/blogpost.html">
-                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nam magnam ducimus id quod eveniet
-                            obcaecati soluta, earum qui. Quam veniam fugiat molestiae ratione recusandae ducimus, velit aliquam
-                            corporis veritatis".
+                        <p>ipsum dolor, sit amet consectetur adipisicing elit. Quas nam magnam ducimus id quod eveniet
+                            obcaecati soluta, earum qui. Quam veniam fugiat molestiae <b>recusandae ducimus, velit aliquam
+                            corporis veritatis.</b>
                         </p>
                     </a>
                     <div class="card-author"><i class="fas fa-user"></i><a href="#" class="author-link">Giselle | December 2021</a></div>
@@ -118,9 +118,9 @@
                 <div class="row-card-body">
                     <h2 class="row-header">Food</h2>
                     <a href="/html/blogpost.html">
-                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas nam magnam ducimus id quod eveniet
+                        <p>ipsum dolor, sit <b> consectetur adipisicing</b> elit. Quas nam magnam ducimus id quod eveniet
                             obcaecati soluta, earum qui. Quam veniam fugiat molestiae ratione recusandae ducimus, velit aliquam
-                            corporis veritatis".
+                            corporis veritatis.
                         </p>
                     </a>
                     <div class="card-author"><i class="fas fa-user"></i><a href="#" class="author-link">Jessica | January 2022</a></div>
